feat: 增加主动信号收件箱
